fixed the h1 overlapping with the navbar on mobile devices

--- a/style.css
+++ b/style.css
@@ -581,4 +581,7 @@ a:hover {
         width: 100%;
         height: 100%;
     }
+    .mainH1 {
+        margin-top: 12.5%;
+    }
 }
